--- a/Views/vPersona.xaml
+++ b/Views/vPersona.xaml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="jgarrido_s5.Views.vPersona"
-             Title="vPersona">
+             Title="Semana 5">
     <VerticalStackLayout>
         <Label 
             Text="BASE DE DATOS: PERSONA"
@@ -31,17 +31,21 @@
 
             <Button x:Name="btnObtener" Text="Get All People" Grid.Row="2" Grid.Column="0" Clicked="btnObtener_Clicked" />
 
-            <CollectionView x:Name="listaPersona" Grid.Row="3" Grid.Column="0">
+            <CollectionView x:Name="listaPersona" Grid.Row="3" Grid.Column="0" SelectionMode="Single" SelectedItem="{Binding SelectedPersona}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="2*"/>
+                                <ColumnDefinition Width="3*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
                             <Label Text="{Binding Id}"/>
-                            <Label Grid.Column="1" Text="{Binding Nombre}"/>
+                            <Label Grid.Column="1" Text="{Binding Name}"/>
+                            <Button Grid.Column="2" x:Name="btnEditar" Text="Editar" Clicked="btnEditar_Clicked"/>
+                            <Button Grid.Column="3" x:Name="btnEliminar" Text="Eliminar" Clicked="btnEliminar_Clicked"/>
                         </Grid>
                     </DataTemplate>
                     
