--- a/Views/Estudiantes.xaml
+++ b/Views/Estudiantes.xaml
@@ -8,7 +8,8 @@
             Text="Consumo de servicio web - GET"
             FontSize="20"
             HorizontalTextAlignment="Center"/>
-        <ListView x:Name="listaEstudiantes">
+
+        <ListView x:Name="listaEstudiantes" ItemSelected="lista_ItemSelected">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -31,8 +32,11 @@
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
-
         </ListView>
 
+        <Button x:Name="btnAgregar"
+                                Text="Agregar"
+                                Clicked="btnAgregar_Clicked" />
+                            
     </VerticalStackLayout>
 </ContentPage>
